Menambahkan tampilan mockup my portofolio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<a href="#contact-section"> Contact Me </a>
 		</div>
 	</div>
-
+	
 	<div class="container-content" id="about-section"> </div>
 
 	<div class="container-content" id="skill-section"> 
@@ -162,7 +162,172 @@
 		</div>
 	</div>
 
-	<div class="container-content" id="portofolio-section"> </div>
+	<div class="container-content" id="portofolio-section"> 
+		<h1 class="container-title-section">
+			My Portofolio
+		</h1>
+
+		<div id="container-portofolio-content">
+
+			<div class="container-list-portofolio">
+				<div class="container-image-portofolio"> </div>
+
+				<div class="container-info-uploaded-portofolio"> 
+					<h3 class="uploaded-name"> Quared </h3>
+					<h3 class="uploaded-time"> Senin, 17 Januari 2022 </h3>
+				</div>
+
+				<div class="container-info-portofolio">
+					<h2 class="title-project-portofolio"> 
+						Quared.id
+					</h2>
+
+					<p class="container-description-portofolio"> 
+						Aplikasi untuk mengelola data portofolio berbasis web, berisi informasi about, skill, portofolio, serta contact yang dapat di hubungi.	
+					</p>
+
+					<div class="container-tag-category">	
+						<a class="tag-category-portofolio html5"> HTML 5 </a>
+						<a class="tag-category-portofolio css3"> CSS 3 </a>
+						<a class="tag-category-portofolio javascript"> Javascript </a>
+						<a class="tag-category-portofolio jquery"> Jquery </a>
+					</div>
+				</div>
+			</div>
+
+			<div class="container-list-portofolio">
+				<div class="container-image-portofolio"> </div>
+
+				<div class="container-info-uploaded-portofolio"> </div>
+
+				<div class="container-info-portofolio">
+					<h2 class="title-project-portofolio"> 
+						NoteIn.id
+					</h2>
+
+					<p class="container-description-portofolio">	
+					 Aplikasi untuk menyimpan dan mengelola catatan 
+					</p>
+
+					<div class="container-tag-category">	
+						<a class="tag-category-portofolio html5"> HTML 5 </a>
+						<a class="tag-category-portofolio css3"> CSS 3 </a>
+						<a class="tag-category-portofolio javascript"> Javascript </a>
+						<a class="tag-category-portofolio jquery"> Jquery </a>
+						<a class="tag-category-portofolio php"> PHP </a>
+						<a class="tag-category-portofolio mysql"> MySQL </a>
+					</div>
+				</div>
+			</div>
+
+			<div class="container-list-portofolio">
+				<div class="container-image-portofolio"> </div>
+
+				<div class="container-info-uploaded-portofolio"> </div>
+
+				<div class="container-info-portofolio">
+					<h2 class="title-project-portofolio"> 
+						CodeIn.id
+					</h2>
+
+					<p class="container-description-portofolio">	
+					 Aplikasi untuk belajar pemograman
+					</p>
+
+					<div class="container-tag-category">	
+						<a class="tag-category-portofolio html5"> HTML 5 </a>
+						<a class="tag-category-portofolio css3"> CSS 3 </a>
+						<a class="tag-category-portofolio javascript"> Javascript </a>
+						<a class="tag-category-portofolio jquery"> Jquery </a>
+						<a class="tag-category-portofolio php"> PHP </a>
+						<a class="tag-category-portofolio mysql"> MySQL </a>
+					</div>
+				</div>
+			</div>
+
+			<div class="container-list-portofolio">
+				<div class="container-image-portofolio"> </div>
+
+				<div class="container-info-uploaded-portofolio"> </div>
+
+				<div class="container-info-portofolio">
+					<h2 class="title-project-portofolio"> 
+						AnimeIn.id
+					</h2>
+
+					<p class="container-description-portofolio"> 
+						Aplikasi untuk mengelola data anime, didalamnya terdapat info data
+						anime terbaru, populer, blog seputar info anime, serta fitur untuk menm-filter anime berdasarkan genre.
+					</p>
+
+					<div class="container-tag-category">	
+						<a class="tag-category-portofolio html5"> HTML 5 </a>
+						<a class="tag-category-portofolio css3"> CSS 3 </a>
+						<a class="tag-category-portofolio javascript"> Javascript </a>
+						<a class="tag-category-portofolio jquery"> Jquery </a>
+						<a class="tag-category-portofolio php"> PHP </a>
+						<a class="tag-category-portofolio mysql"> MySQL </a>
+						<a class="tag-category-portofolio css3"> API </a>
+					</div>
+				</div>
+			</div>
+
+			<div class="container-list-portofolio">
+				<div class="container-image-portofolio"> </div>
+
+				<div class="container-info-uploaded-portofolio"> </div>
+
+				<div class="container-info-portofolio">
+					<h2 class="title-project-portofolio"> 
+						DramaIn.id
+					</h2>
+
+					<p class="container-description-portofolio"> 
+						Aplikasi untuk mengelola data anime, didalamnya terdapat info data
+						anime terbaru, populer, blog seputar info anime, serta fitur untuk menm-filter anime berdasarkan genre.
+					</p>
+
+					<div class="container-tag-category">	
+						<a class="tag-category-portofolio html5"> HTML 5 </a>
+						<a class="tag-category-portofolio css3"> CSS 3 </a>
+						<a class="tag-category-portofolio javascript"> Javascript </a>
+						<a class="tag-category-portofolio jquery"> Jquery </a>
+						<a class="tag-category-portofolio php"> PHP </a>
+						<a class="tag-category-portofolio mysql"> MySQL </a>
+						<a class="tag-category-portofolio css3"> API </a>
+					</div>
+				</div>
+			</div>
+
+			<div class="container-list-portofolio">
+				<div class="container-image-portofolio"> </div>
+
+				<div class="container-info-uploaded-portofolio"> </div>
+
+				<div class="container-info-portofolio">
+					<h2 class="title-project-portofolio"> 
+						PahamIn.id
+					</h2>
+
+					<p class="container-description-portofolio"> 
+						Aplikasi untuk belajar bahasa
+					</p>
+
+					<div class="container-tag-category">	
+						<a class="tag-category-portofolio html5"> HTML 5 </a>
+						<a class="tag-category-portofolio css3"> CSS 3 </a>
+						<a class="tag-category-portofolio javascript"> Javascript </a>
+						<a class="tag-category-portofolio jquery"> Jquery </a>
+						<a class="tag-category-portofolio php"> PHP </a>
+						<a class="tag-category-portofolio mysql"> MySQL </a>
+						<a class="tag-category-portofolio css3"> API </a>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
 	<div class="container-content" id="contact-section"> </div>
 
 	<script type="text/javascript">
