--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="https://kit.fontawesome.com/9774bad9f8.js" crossorigin="anonymous"></script>
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<link href="responsive.css" rel="stylesheet" type="text/css">
-	<link href="fontAwesome/css/all.min.css" rel="stylesheet">
 	<script src="jquery/jquery.min.js" type="text/javascript"></script>
 	<title> Hello World </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,6 +21,10 @@
 			<a class="active" href="#skill-section"> My Skill </a>
 			<a href="#portofolio-section"> My Portofolio </a>
 			<a href="#contact-section"> Contact Me </a>
+		</div>
+
+		<div class="btn-responsive-nav-link">
+			<i class="fas fa-bars"></i>
 		</div>
 	</div>
 	
@@ -128,7 +132,9 @@
 			</div>
 
 			<div class="list-skill-item">
-				<i class="fab fa-bootstrap item-boostrap"></i>
+				<div class="container-logo-skill">
+					<img src="Image/boostrap.png">
+				</div>
 
 				<h3> Boostrap </h3>
 			</div>
@@ -170,157 +176,181 @@
 		<div id="container-portofolio-content">
 
 			<div class="container-list-portofolio">
-				<div class="container-image-portofolio"> </div>
+				<div class="sub-container-list-portofolio">
+					<div class="container-image-portofolio"> 
+						<img src="Image/portofolio-6.jpg"/>
+					</div>
 
-				<div class="container-info-uploaded-portofolio"> 
-					<h3 class="uploaded-name"> Quared </h3>
-					<h3 class="uploaded-time"> Senin, 17 Januari 2022 </h3>
-				</div>
+					<!-- <div class="container-info-uploaded-portofolio"> 
+						<h3 class="uploaded-name"> Quared </h3>
+						<h3 class="uploaded-time"> Senin, 17 Januari 2022 </h3>
+					</div> -->
 
-				<div class="container-info-portofolio">
-					<h2 class="title-project-portofolio"> 
-						Quared.id
-					</h2>
+					<div class="container-info-portofolio">
+						<h2 class="title-project-portofolio"> 
+							Quared.id
+						</h2>
 
-					<p class="container-description-portofolio"> 
-						Aplikasi untuk mengelola data portofolio berbasis web, berisi informasi about, skill, portofolio, serta contact yang dapat di hubungi.	
-					</p>
+						<p class="container-description-portofolio"> 
+							Aplikasi untuk mengelola data portofolio berbasis web, berisi informasi about, skill, portofolio, serta contact yang dapat di hubungi.	
+						</p>
 
-					<div class="container-tag-category">	
-						<a class="tag-category-portofolio html5"> HTML 5 </a>
-						<a class="tag-category-portofolio css3"> CSS 3 </a>
-						<a class="tag-category-portofolio javascript"> Javascript </a>
-						<a class="tag-category-portofolio jquery"> Jquery </a>
+						<div class="container-tag-category">	
+							<a class="tag-category-portofolio html5"> HTML 5 </a>
+							<a class="tag-category-portofolio css3"> CSS 3 </a>
+							<a class="tag-category-portofolio javascript"> Javascript </a>
+							<a class="tag-category-portofolio jquery"> Jquery </a>
+						</div>
 					</div>
 				</div>
 			</div>
 
 			<div class="container-list-portofolio">
-				<div class="container-image-portofolio"> </div>
+				<div class="sub-container-list-portofolio">
+					<div class="container-image-portofolio"> 
+						<img src="Image/portofolio-7.jpg"/>
+					</div>
 
-				<div class="container-info-uploaded-portofolio"> </div>
+					<!-- <div class="container-info-uploaded-portofolio"> </div> -->
 
-				<div class="container-info-portofolio">
-					<h2 class="title-project-portofolio"> 
-						NoteIn.id
-					</h2>
+					<div class="container-info-portofolio">
+						<h2 class="title-project-portofolio"> 
+							NoteIn.id
+						</h2>
 
-					<p class="container-description-portofolio">	
-					 Aplikasi untuk menyimpan dan mengelola catatan 
-					</p>
+						<p class="container-description-portofolio">	
+					 		Aplikasi untuk menyimpan dan mengelola catatan 
+						</p>
 
-					<div class="container-tag-category">	
-						<a class="tag-category-portofolio html5"> HTML 5 </a>
-						<a class="tag-category-portofolio css3"> CSS 3 </a>
-						<a class="tag-category-portofolio javascript"> Javascript </a>
-						<a class="tag-category-portofolio jquery"> Jquery </a>
-						<a class="tag-category-portofolio php"> PHP </a>
-						<a class="tag-category-portofolio mysql"> MySQL </a>
+						<div class="container-tag-category">	
+							<a class="tag-category-portofolio html5"> HTML 5 </a>
+							<a class="tag-category-portofolio css3"> CSS 3 </a>
+							<a class="tag-category-portofolio javascript"> Javascript </a>
+							<a class="tag-category-portofolio jquery"> Jquery </a>
+							<a class="tag-category-portofolio php"> PHP </a>
+							<a class="tag-category-portofolio mysql"> MySQL </a>
+						</div>
 					</div>
 				</div>
 			</div>
 
 			<div class="container-list-portofolio">
-				<div class="container-image-portofolio"> </div>
+				<div class="sub-container-list-portofolio">
+					<div class="container-image-portofolio"> 
+						<img src="Image/portofolio-2.jpg"/>
+					</div>
 
-				<div class="container-info-uploaded-portofolio"> </div>
+					<!-- <div class="container-info-uploaded-portofolio"> </div> -->
 
-				<div class="container-info-portofolio">
-					<h2 class="title-project-portofolio"> 
-						CodeIn.id
-					</h2>
+					<div class="container-info-portofolio">
+						<h2 class="title-project-portofolio"> 
+							CodeIn.id
+						</h2>
 
-					<p class="container-description-portofolio">	
-					 Aplikasi untuk belajar pemograman
-					</p>
+						<p class="container-description-portofolio">	
+							 Aplikasi untuk belajar pemograman
+						</p>
 
-					<div class="container-tag-category">	
-						<a class="tag-category-portofolio html5"> HTML 5 </a>
-						<a class="tag-category-portofolio css3"> CSS 3 </a>
-						<a class="tag-category-portofolio javascript"> Javascript </a>
-						<a class="tag-category-portofolio jquery"> Jquery </a>
-						<a class="tag-category-portofolio php"> PHP </a>
-						<a class="tag-category-portofolio mysql"> MySQL </a>
+						<div class="container-tag-category">	
+							<a class="tag-category-portofolio html5"> HTML 5 </a>
+							<a class="tag-category-portofolio css3"> CSS 3 </a>
+							<a class="tag-category-portofolio javascript"> Javascript </a>
+							<a class="tag-category-portofolio jquery"> Jquery </a>
+							<a class="tag-category-portofolio php"> PHP </a>
+							<a class="tag-category-portofolio mysql"> MySQL </a>
+						</div>
 					</div>
 				</div>
 			</div>
 
 			<div class="container-list-portofolio">
-				<div class="container-image-portofolio"> </div>
+				<div class="sub-container-list-portofolio">
+					<div class="container-image-portofolio"> 
+						<img src="Image/portofolio-3.jpg"/>
+					</div>
 
-				<div class="container-info-uploaded-portofolio"> </div>
+					<!-- <div class="container-info-uploaded-portofolio"> </div> -->
 
-				<div class="container-info-portofolio">
-					<h2 class="title-project-portofolio"> 
-						AnimeIn.id
-					</h2>
+					<div class="container-info-portofolio">
+						<h2 class="title-project-portofolio"> 
+							AnimeIn.id
+						</h2>
 
-					<p class="container-description-portofolio"> 
-						Aplikasi untuk mengelola data anime, didalamnya terdapat info data
-						anime terbaru, populer, blog seputar info anime, serta fitur untuk menm-filter anime berdasarkan genre.
-					</p>
+						<p class="container-description-portofolio"> 
+							Aplikasi untuk mengelola data anime, didalamnya terdapat info data
+							anime terbaru, populer, blog seputar info anime, serta fitur untuk menm-filter anime berdasarkan genre.
+						</p>
 
-					<div class="container-tag-category">	
-						<a class="tag-category-portofolio html5"> HTML 5 </a>
-						<a class="tag-category-portofolio css3"> CSS 3 </a>
-						<a class="tag-category-portofolio javascript"> Javascript </a>
-						<a class="tag-category-portofolio jquery"> Jquery </a>
-						<a class="tag-category-portofolio php"> PHP </a>
-						<a class="tag-category-portofolio mysql"> MySQL </a>
-						<a class="tag-category-portofolio css3"> API </a>
+						<div class="container-tag-category">	
+							<a class="tag-category-portofolio html5"> HTML 5 </a>
+							<a class="tag-category-portofolio css3"> CSS 3 </a>
+							<a class="tag-category-portofolio javascript"> Javascript </a>
+							<a class="tag-category-portofolio jquery"> Jquery </a>
+							<a class="tag-category-portofolio php"> PHP </a>
+							<a class="tag-category-portofolio mysql"> MySQL </a>
+							<a class="tag-category-portofolio css3"> API </a>
+						</div>
 					</div>
 				</div>
 			</div>
 
 			<div class="container-list-portofolio">
-				<div class="container-image-portofolio"> </div>
+				<div class="sub-container-list-portofolio">
+					<div class="container-image-portofolio"> 
+						<img src="Image/portofolio-4.jpg"/>
+					</div>
 
-				<div class="container-info-uploaded-portofolio"> </div>
+					<!-- <div class="container-info-uploaded-portofolio"> </div> -->
 
-				<div class="container-info-portofolio">
-					<h2 class="title-project-portofolio"> 
-						DramaIn.id
-					</h2>
+					<div class="container-info-portofolio">
+						<h2 class="title-project-portofolio"> 
+							DramaIn.id
+						</h2>
 
-					<p class="container-description-portofolio"> 
-						Aplikasi untuk mengelola data anime, didalamnya terdapat info data
-						anime terbaru, populer, blog seputar info anime, serta fitur untuk menm-filter anime berdasarkan genre.
-					</p>
+						<p class="container-description-portofolio"> 
+							Aplikasi untuk mengelola data anime, didalamnya terdapat info data
+							anime terbaru, populer, blog seputar info anime, serta fitur untuk menm-filter anime berdasarkan genre.
+						</p>
 
-					<div class="container-tag-category">	
-						<a class="tag-category-portofolio html5"> HTML 5 </a>
-						<a class="tag-category-portofolio css3"> CSS 3 </a>
-						<a class="tag-category-portofolio javascript"> Javascript </a>
-						<a class="tag-category-portofolio jquery"> Jquery </a>
-						<a class="tag-category-portofolio php"> PHP </a>
-						<a class="tag-category-portofolio mysql"> MySQL </a>
-						<a class="tag-category-portofolio css3"> API </a>
+						<div class="container-tag-category">	
+							<a class="tag-category-portofolio html5"> HTML 5 </a>
+							<a class="tag-category-portofolio css3"> CSS 3 </a>
+							<a class="tag-category-portofolio javascript"> Javascript </a>
+							<a class="tag-category-portofolio jquery"> Jquery </a>
+							<a class="tag-category-portofolio php"> PHP </a>
+							<a class="tag-category-portofolio mysql"> MySQL </a>
+							<a class="tag-category-portofolio css3"> API </a>
+						</div>
 					</div>
 				</div>
 			</div>
 
 			<div class="container-list-portofolio">
-				<div class="container-image-portofolio"> </div>
+				<div class="sub-container-list-portofolio">
+					<div class="container-image-portofolio"> 
+						<img src="Image/portofolio-5.jpg"/>
+					</div>
 
-				<div class="container-info-uploaded-portofolio"> </div>
+					<!-- <div class="container-info-uploaded-portofolio"> </div> -->
 
-				<div class="container-info-portofolio">
-					<h2 class="title-project-portofolio"> 
-						PahamIn.id
-					</h2>
+					<div class="container-info-portofolio">
+						<h2 class="title-project-portofolio"> 
+							PahamIn.id
+						</h2>
 
-					<p class="container-description-portofolio"> 
-						Aplikasi untuk belajar bahasa
-					</p>
+						<p class="container-description-portofolio"> 
+							Aplikasi untuk belajar bahasa
+						</p>
 
-					<div class="container-tag-category">	
-						<a class="tag-category-portofolio html5"> HTML 5 </a>
-						<a class="tag-category-portofolio css3"> CSS 3 </a>
-						<a class="tag-category-portofolio javascript"> Javascript </a>
-						<a class="tag-category-portofolio jquery"> Jquery </a>
-						<a class="tag-category-portofolio php"> PHP </a>
-						<a class="tag-category-portofolio mysql"> MySQL </a>
-						<a class="tag-category-portofolio css3"> API </a>
+						<div class="container-tag-category">	
+							<a class="tag-category-portofolio html5"> HTML 5 </a>
+							<a class="tag-category-portofolio css3"> CSS 3 </a>
+							<a class="tag-category-portofolio javascript"> Javascript </a>
+							<a class="tag-category-portofolio jquery"> Jquery </a>
+							<a class="tag-category-portofolio php"> PHP </a>
+							<a class="tag-category-portofolio mysql"> MySQL </a>
+							<a class="tag-category-portofolio css3"> API </a>
+						</div>
 					</div>
 				</div>
 			</div>
