Edit Ekstensi gambar portofolio

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			<div class="container-list-portofolio">
 				<div class="sub-container-list-portofolio">
 					<div class="container-image-portofolio"> 
-						<img src="Image/portofolio-6.jpg"/>
+						<img src="Image/portofolio-6.JPG"/>
 					</div>
 
 					<!-- <div class="container-info-uploaded-portofolio"> 
@@ -208,7 +208,7 @@
 			<div class="container-list-portofolio">
 				<div class="sub-container-list-portofolio">
 					<div class="container-image-portofolio"> 
-						<img src="Image/portofolio-7.jpg"/>
+						<img src="Image/portofolio-7.JPG"/>
 					</div>
 
 					<!-- <div class="container-info-uploaded-portofolio"> </div> -->
@@ -237,7 +237,7 @@
 			<div class="container-list-portofolio">
 				<div class="sub-container-list-portofolio">
 					<div class="container-image-portofolio"> 
-						<img src="Image/portofolio-2.jpg"/>
+						<img src="Image/portofolio-2.JPG"/>
 					</div>
 
 					<!-- <div class="container-info-uploaded-portofolio"> </div> -->
@@ -266,7 +266,7 @@
 			<div class="container-list-portofolio">
 				<div class="sub-container-list-portofolio">
 					<div class="container-image-portofolio"> 
-						<img src="Image/portofolio-3.jpg"/>
+						<img src="Image/portofolio-3.JPG"/>
 					</div>
 
 					<!-- <div class="container-info-uploaded-portofolio"> </div> -->
@@ -297,7 +297,7 @@
 			<div class="container-list-portofolio">
 				<div class="sub-container-list-portofolio">
 					<div class="container-image-portofolio"> 
-						<img src="Image/portofolio-4.jpg"/>
+						<img src="Image/portofolio-4.JPG"/>
 					</div>
 
 					<!-- <div class="container-info-uploaded-portofolio"> </div> -->
@@ -328,7 +328,7 @@
 			<div class="container-list-portofolio">
 				<div class="sub-container-list-portofolio">
 					<div class="container-image-portofolio"> 
-						<img src="Image/portofolio-5.jpg"/>
+						<img src="Image/portofolio-5.JPG"/>
 					</div>
 
 					<!-- <div class="container-info-uploaded-portofolio"> </div> -->
